applications/pdns4-shim/base/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pdns4-shim
  namespace: external-dns
spec:
  parentRefs:
    - name: pdns4-shim
      namespace: external-dns
      sectionName: https
  hostnames:
    - pdns4-shim.rye.ninja
  rules:
    - backendRefs:
        - name: pdns4-shim
          port: 8081
